WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196862
WebsitePolicies doesn't copy its media source policy in WebsitePolicies::copy
https://bugs.webkit.org/show_bug.cgi?id=196862
Summary
WebsitePolicies doesn't copy its media source policy in WebsitePolicies::copy
Wenson Hsieh
Reported
2019-04-12 09:10:12 PDT
This currently doesn't have any observable effect on the user or API/SPI clients, but...clearly it's not great.
Attachments
Patch
(1.77 KB, patch)
2019-04-12 09:14 PDT
,
Wenson Hsieh
darin
: review+
Details
Formatted Diff
Diff
Rebase on trunk
(1.81 KB, patch)
2019-04-12 10:20 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-04-12 09:14:57 PDT
Created
attachment 367323
[details]
Patch
Wenson Hsieh
Comment 2
2019-04-12 10:20:16 PDT
Created
attachment 367329
[details]
Rebase on trunk
WebKit Commit Bot
Comment 3
2019-04-12 10:59:11 PDT
Comment on
attachment 367329
[details]
Rebase on trunk Clearing flags on attachment: 367329 Committed
r244221
: <
https://trac.webkit.org/changeset/244221
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug