WebsitePolicies doesn't copy its media source policy in WebsitePolicies::copy https://bugs.webkit.org/show_bug.cgi?id=196862

Reviewed by Darin Adler.

Add a missing bit of code to copy m_mediaSourcePolicy over when making a copy of WebsitePolicies. This doesn't
have any observable effect, since m_mediaSourcePolicy isn't currently exposed as SPI on WKWebpagePreferences.

* UIProcess/API/APIWebsitePolicies.cpp:
(API::WebsitePolicies::copy const):


Canonical link: https://commits.webkit.org/211130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244221 268f45cc-cd09-0410-ab3c-d52691b4dbfc